fix(admin): transparent scrollbar
* scrollbar in side menu is now transparent

--- a/apps/admin-gui/src/app/app.component.scss
+++ b/apps/admin-gui/src/app/app.component.scss
@@ -24,6 +24,6 @@
 }
 
 ng-scrollbar {
-  --scrollbar-thumb-color: #6a6a6a;
+  --scrollbar-thumb: (106, 106, 106, 0.5);
   --scrollbar-thumb-hover-color: lightgrey;
 }
